kubernetes/apps/ntfy/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy
  namespace: ntfy
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: ntfy
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: ntfy.png
    gethomepage.dev/href: https://ntfy.syslabs.dev
    gethomepage.dev/podSelector: app.kubernetes.io/name=ntfy
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`ntfy.syslabs.dev`)
      kind: Rule
      services:
        - name: ntfy
          port: 80
  tls: {}
